other-gpol/create-default-pdb/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pdb-test
policies:
- ../create-default-pdb.yaml
resources:
- resource.yaml
results:
- generatedResource: generatedResource.yaml
  kind: Deployment
  policy: create-default-pdb
  resources:
  - hello-world/nginx-deployment
  result: pass
  isGeneratingPolicy: true
